--- a/codeReviewAgent.ipynb
+++ b/codeReviewAgent.ipynb
@@ -652,7 +652,7 @@
         "    ignore_dirs = {'public', 'images', 'media', 'assets'}\n",
         "    global global_path\n",
         "\n",
-        "    api_url = f\"https://api.github.com/repos/wolfsbane9513/100x_buildathon/contents/\"\n",
+        "    api_url = f\"https://api.github.com/repos/{owner}/{repo}/contents/{path}\"\n",
         "    # Add the Authorization header with the token\n",
         "    headers = {'Authorization': f'token {github_secret}'}\n",
         "    # Make the request\n",
@@ -869,7 +869,7 @@
         "              }\n",
         "            },\n",
         "          ]\n",
-        "      add_data_response = notion.blocks.children.append(\n",
+        "      add_data_response = Client.blocks.children.append(\n",
         "          block_id=page_id,children=children\n",
         "      )\n",
         "      print(add_data_response)\n",
