--- a/codeReviewAgent.ipynb
+++ b/codeReviewAgent.ipynb
@@ -20,13 +20,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KPkHkPUFTxkK",
-        "outputId": "b47ead00-db4c-42de-fb97-5051dc7866fc"
+        "outputId": "e7fa7102-4a52-480f-d123-1ddffb2c4d89"
       },
       "outputs": [
         {
@@ -535,7 +535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 30,
       "metadata": {
         "id": "U9fddpSvTxkK"
       },
@@ -560,7 +560,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "4GJrQOhYTxkK"
       },
@@ -582,7 +582,7 @@
       "metadata": {
         "id": "DBUQYCNXX-2a"
       },
-      "execution_count": 9,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -598,7 +598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 33,
       "metadata": {
         "id": "Jv6VxKi3TxkK"
       },
@@ -629,45 +629,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 34,
       "metadata": {
         "id": "Nur5C6M4TxkL"
       },
       "outputs": [],
       "source": [
-        "# Our final path will be stored in this global variable\n",
+        "# Make sure GitHub token is properly set\n",
+        "github_secret = os.getenv('GITHUB_KEY')\n",
+        "if not github_secret:\n",
+        "    raise ValueError(\"GitHub token not found. Please set GITHUB_KEY environment variable.\")\n",
+        "\n",
+        "# Global variable for file tree\n",
         "global_path = \"\"\n",
-        "# Function to get tree structure of given github repo\n",
-        "def getFileTree(owner,repo,path='',level=0):\n",
-        "    \"\"\"\n",
-        "    Fetch and print the tree structure of a GitHub repository, ignoring specific folders.\n",
         "\n",
-        "    Parameters:\n",
-        "    - owner: The username of the repository owner.\n",
-        "    - repo: The name of the repository.\n",
-        "    - path: The path to fetch. Leave empty to fetch the root directory.\n",
-        "    - level: The current depth in the tree structure.\n",
+        "def getFileTree(owner, repo, path='', level=0):\n",
         "    \"\"\"\n",
-        "    # Directories to ignore\n",
-        "    ignore_dirs = {'public', 'images', 'media', 'assets'}\n",
+        "    Fetch and print the tree structure of a GitHub repository.\n",
+        "    \"\"\"\n",
         "    global global_path\n",
+        "    try:\n",
+        "        api_url = f\"https://api.github.com/repos/{owner}/{repo}/contents/{path}\"\n",
+        "        headers = {\n",
+        "            'Authorization': f'Bearer {github_secret}',\n",
+        "            'Accept': 'application/vnd.github.v3+json'\n",
+        "        }\n",
         "\n",
-        "    api_url = f\"https://api.github.com/repos/{owner}/{repo}/contents/{path}\"\n",
-        "    # Add the Authorization header with the token\n",
-        "    headers = {'Authorization': f'token {github_secret}'}\n",
-        "    # Make the request\n",
-        "    response = requests.get(api_url,headers=headers)\n",
-        "    items = response.json()\n",
+        "        response = requests.get(api_url, headers=headers)\n",
+        "        response.raise_for_status()\n",
         "\n",
-        "    if isinstance(items, list):\n",
+        "        items = response.json()\n",
+        "\n",
+        "        if not isinstance(items, list):\n",
+        "            print(f\"Error: Expected list of items, got {type(items)}\")\n",
+        "            return\n",
+        "\n",
         "        for item in items:\n",
-        "            # Skip ignored directories\n",
-        "            if item['name'] in ignore_dirs:\n",
+        "            if item['name'] in {'public', 'images', 'media', 'assets'}:\n",
         "                continue\n",
         "\n",
         "            global_path += f\"{' ' * (level * 2)}- {item['name']}\\n\"\n",
+        "\n",
         "            if item['type'] == 'dir':\n",
-        "                getFileTree(owner, repo, item['path'], level + 1)"
+        "                getFileTree(owner, repo, item['path'], level + 1)\n",
+        "\n",
+        "    except requests.exceptions.RequestException as e:\n",
+        "        print(f\"Error accessing GitHub API: {e}\")\n",
+        "        print(f\"Response content: {response.content if 'response' in locals() else 'No response'}\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"Unexpected error: {e}\")"
       ]
     },
     {
@@ -681,7 +691,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 35,
       "metadata": {
         "id": "TpRw71ItTxkL"
       },
@@ -800,7 +810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 36,
       "metadata": {
         "id": "4nHPS6B_TxkL"
       },
@@ -932,7 +942,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 37,
       "metadata": {
         "id": "L4lbToKATxkM"
       },
@@ -996,7 +1006,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 38,
       "metadata": {
         "id": "LkxtdWa4TxkM"
       },
@@ -1046,21 +1056,128 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jaYPSw4yTxkM",
-        "outputId": "3d8a43b6-d2e1-49fb-e9be-20cf4caa1015"
+        "outputId": "a708b782-aabf-4356-b678-c8620fb358d2"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Provide github repo URL:https://github.com/wolfsbane9513/100x_buildathon\n",
-            "Provide file/folder name you want to review:\n"
+            "Provide github repo URL:https://api.github.com/wolfsbane9513/100x_buildathon\n",
+            "Provide file/folder name you want to review:\n",
+            "Fetching repository structure...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "ERROR:root:LiteLLM call failed: litellm.AuthenticationError: AuthenticationError: OpenAIException - The api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable\n",
+            "ERROR:root:LiteLLM call failed: litellm.AuthenticationError: AuthenticationError: OpenAIException - The api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable\n",
+            "ERROR:root:LiteLLM call failed: litellm.AuthenticationError: AuthenticationError: OpenAIException - The api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Error accessing GitHub API: 403 Client Error: Forbidden for url: https://api.github.com/repos/wolfsbane9513/100x_buildathon/contents/\n",
+            "Response content: b'{\"message\":\"API rate limit exceeded for user ID 11406551. If you reach out to GitHub Support for help, please include the request ID AEA8:1E45EF:415C75F:80E408B:6746D771 and timestamp 2024-11-27 08:25:21 UTC.\",\"documentation_url\":\"https://docs.github.com/rest/overview/rate-limits-for-the-rest-api\",\"status\":\"403\"}'\n",
+            "Failed to fetch repository structure. Please check your GitHub token and repository permissions.\n",
+            "\u001b[1m\u001b[95m# Agent:\u001b[00m \u001b[1m\u001b[92mFile path extractor\u001b[00m\n",
+            "\u001b[95m## Task:\u001b[00m \u001b[92m\n",
+            "        You are given a tree structure of folder and userInput and first you have to decide whether it is a folder or file from given tree structure of a folder\n",
+            "        Follow this approach\n",
+            "        - If it's a file then return array with 1 element which contains the full path of that file in this folder structure\n",
+            "        - If it's a folder then return array of paths of sub files inside that folder, if there is a subfolder in given folder, then return paths for those files as well\n",
+            "        - If userInput is not present in given tree structure then just return empty array\n",
+            "        Please return FULL path of a given file in given folder tree structure\n",
+            "        For example if tree structure looks like this:\n",
+            "        - src\n",
+            "          - components\n",
+            "            - Login.jsx\n",
+            "            - Password.jsx\n",
+            "        - backend\n",
+            "          - api\n",
+            "        Then the full path of Login.jsx will be src/components/Login.jsx\n",
+            "        DON'T send every file content at once, send it one by one to reviewAgent\n",
+            "        here is the tree structure of folder:\n",
+            "        \n",
+            "        here is user input\n",
+            "        \n",
+            "\n",
+            "        NOTE: ONLY RETURN ARRAY OF PATHS WITHOUT ANY EXTRA TEXT IN RESPONSE\n",
+            "\n",
+            "        \u001b[00m\n",
+            "\n",
+            "\n",
+            "LiteLLM.Info: If you need to debug this error, use `litellm.set_verbose=True'.\n",
+            "\n",
+            "\u001b[1m\u001b[95m# Agent:\u001b[00m \u001b[1m\u001b[92mFile path extractor\u001b[00m\n",
+            "\u001b[95m## Task:\u001b[00m \u001b[92m\n",
+            "        You are given a tree structure of folder and userInput and first you have to decide whether it is a folder or file from given tree structure of a folder\n",
+            "        Follow this approach\n",
+            "        - If it's a file then return array with 1 element which contains the full path of that file in this folder structure\n",
+            "        - If it's a folder then return array of paths of sub files inside that folder, if there is a subfolder in given folder, then return paths for those files as well\n",
+            "        - If userInput is not present in given tree structure then just return empty array\n",
+            "        Please return FULL path of a given file in given folder tree structure\n",
+            "        For example if tree structure looks like this:\n",
+            "        - src\n",
+            "          - components\n",
+            "            - Login.jsx\n",
+            "            - Password.jsx\n",
+            "        - backend\n",
+            "          - api\n",
+            "        Then the full path of Login.jsx will be src/components/Login.jsx\n",
+            "        DON'T send every file content at once, send it one by one to reviewAgent\n",
+            "        here is the tree structure of folder:\n",
+            "        \n",
+            "        here is user input\n",
+            "        \n",
+            "\n",
+            "        NOTE: ONLY RETURN ARRAY OF PATHS WITHOUT ANY EXTRA TEXT IN RESPONSE\n",
+            "\n",
+            "        \u001b[00m\n",
+            "\n",
+            "\n",
+            "LiteLLM.Info: If you need to debug this error, use `litellm.set_verbose=True'.\n",
+            "\n",
+            "\u001b[1m\u001b[95m# Agent:\u001b[00m \u001b[1m\u001b[92mFile path extractor\u001b[00m\n",
+            "\u001b[95m## Task:\u001b[00m \u001b[92m\n",
+            "        You are given a tree structure of folder and userInput and first you have to decide whether it is a folder or file from given tree structure of a folder\n",
+            "        Follow this approach\n",
+            "        - If it's a file then return array with 1 element which contains the full path of that file in this folder structure\n",
+            "        - If it's a folder then return array of paths of sub files inside that folder, if there is a subfolder in given folder, then return paths for those files as well\n",
+            "        - If userInput is not present in given tree structure then just return empty array\n",
+            "        Please return FULL path of a given file in given folder tree structure\n",
+            "        For example if tree structure looks like this:\n",
+            "        - src\n",
+            "          - components\n",
+            "            - Login.jsx\n",
+            "            - Password.jsx\n",
+            "        - backend\n",
+            "          - api\n",
+            "        Then the full path of Login.jsx will be src/components/Login.jsx\n",
+            "        DON'T send every file content at once, send it one by one to reviewAgent\n",
+            "        here is the tree structure of folder:\n",
+            "        \n",
+            "        here is user input\n",
+            "        \n",
+            "\n",
+            "        NOTE: ONLY RETURN ARRAY OF PATHS WITHOUT ANY EXTRA TEXT IN RESPONSE\n",
+            "\n",
+            "        \u001b[00m\n",
+            "\n",
+            "\n",
+            "LiteLLM.Info: If you need to debug this error, use `litellm.set_verbose=True'.\n",
+            "\n",
+            "Error during execution: litellm.AuthenticationError: AuthenticationError: OpenAIException - The api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable\n"
           ]
         }
       ],
@@ -1092,9 +1209,46 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "def test_github_token():\n",
+        "    headers = {\n",
+        "        'Authorization': f'Bearer {github_secret}',\n",
+        "        'Accept': 'application/vnd.github.v3+json'\n",
+        "    }\n",
+        "    test_url = \"https://api.github.com/wolfsbane9513/100x_buildathon\"\n",
+        "    response = requests.get(test_url, headers=headers)\n",
+        "    print(f\"Status code: {response.status_code}\")\n",
+        "    if response.status_code == 200:\n",
+        "        print(\"Token is valid\")\n",
+        "    else:\n",
+        "        print(f\"Token error: {response.json()}\")\n",
+        "\n",
+        "test_github_token()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U8sD0OjfhWoy",
+        "outputId": "90ed208c-3eee-4d10-cba4-7e563fb47cd1"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Status code: 403\n",
+            "Token error: {'message': 'API rate limit exceeded for user ID 11406551. If you reach out to GitHub Support for help, please include the request ID C964:C585A:2685BE1:4BE099D:6746D625 and timestamp 2024-11-27 08:19:49 UTC.', 'documentation_url': 'https://docs.github.com/rest/overview/rate-limits-for-the-rest-api', 'status': '403'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "U8sD0OjfhWoy"
+        "id": "SbV6H05HtIC2"
       },
       "execution_count": null,
       "outputs": []
