--- a/codeReviewAgent.ipynb
+++ b/codeReviewAgent.ipynb
@@ -1186,25 +1186,53 @@
         "# Take input from user\n",
         "github_url = input(\"Provide github repo URL:\")\n",
         "userInput = input(\"Provide file/folder name you want to review:\")\n",
+        "\n",
         "# Get owner and repo name from github url\n",
         "split_url = github_url.split('/')\n",
         "owner = split_url[3]\n",
         "repo = split_url[4]\n",
+        "\n",
         "# Get the tree structure of github repository\n",
-        "getFileTree(owner=owner,repo=repo)\n",
-        "# Get array of full paths of given files\n",
+        "print(\"Fetching repository structure...\")\n",
+        "getFileTree(owner=owner, repo=repo)\n",
+        "\n",
+        "if not global_path:\n",
+        "    print(\"Failed to fetch repository structure. Please check your GitHub token and repository permissions.\")\n",
+        "    exit(1)\n",
+        "\n",
+        "# Create path extraction crew\n",
         "pathAgent = Agents.PathAgent()\n",
-        "pathTask = Tasks.getFilePathTask(agent=pathAgent,filetree=global_path,userInput=userInput)\n",
-        "paths = pathTask.execute()\n",
-        "global_path = \"\"\n",
-        "# Convert agent output into an array\n",
-        "page_id = createNotionPage(projectName=repo)\n",
-        "paths = ast.literal_eval(paths)\n",
-        "# Traverse the paths one by one and review them using ReviewCrew\n",
-        "for path in paths:\n",
-        "  # Run crew\n",
-        "  reviewCrew = ReviewCrew(owner=owner,repo=repo,page_id=page_id,path=path)\n",
-        "  reviewCrew.run()"
+        "pathTask = Tasks.getFilePathTask(agent=pathAgent, filetree=global_path, userInput=userInput)\n",
+        "\n",
+        "# Create and run a crew for path extraction with verbose as boolean\n",
+        "path_crew = Crew(\n",
+        "    agents=[pathAgent],\n",
+        "    tasks=[pathTask],\n",
+        "    verbose=True  # Changed from 2 to True\n",
+        ")\n",
+        "\n",
+        "try:\n",
+        "    # Get the paths from crew execution\n",
+        "    paths_result = path_crew.kickoff()\n",
+        "    print(f\"Path extraction result: {paths_result}\")\n",
+        "\n",
+        "    # Reset global path\n",
+        "    global_path = \"\"\n",
+        "\n",
+        "    # Create notion page\n",
+        "    page_id = createNotionPage(projectName=repo)\n",
+        "\n",
+        "    # Convert the string result to an array\n",
+        "    paths = ast.literal_eval(paths_result)\n",
+        "\n",
+        "    # Traverse the paths one by one and review them using ReviewCrew\n",
+        "    for path in paths:\n",
+        "        print(f\"Reviewing file: {path}\")\n",
+        "        reviewCrew = ReviewCrew(owner=owner, repo=repo, page_id=page_id, path=path)\n",
+        "        reviewCrew.run()\n",
+        "\n",
+        "except Exception as e:\n",
+        "    print(f\"Error during execution: {e}\")\n"
       ]
     },
     {
