--- a/codeReviewAgent.ipynb
+++ b/codeReviewAgent.ipynb
@@ -575,14 +575,38 @@
       "cell_type": "code",
       "source": [
         "from google.colab import userdata\n",
-        "secret = userdata.get(\"OPENAI_API_KEY\")\n",
-        "github_secret = userdata.get('GITHUB_KEY')\n",
-        "notion_key = userdata.get('NOTION_KEY')"
+        "# At the beginning of your code, verify API keys\n",
+        "from google.colab import userdata\n",
+        "\n",
+        "def verify_api_keys():\n",
+        "    global secret, github_secret, notion_key\n",
+        "\n",
+        "    secret = userdata.get(\"OPENAI_API_KEY\")\n",
+        "    github_secret = userdata.get('GITHUB_KEY')\n",
+        "    notion_key = userdata.get('NOTION_KEY')\n",
+        "\n",
+        "    if not secret:\n",
+        "        raise ValueError(\"OpenAI API key not found in Colab secrets\")\n",
+        "    if not github_secret:\n",
+        "        raise ValueError(\"GitHub token not found in Colab secrets\")\n",
+        "    if not notion_key:\n",
+        "        raise ValueError(\"Notion key not found in Colab secrets\")\n",
+        "\n",
+        "    # Set OpenAI key for crewAI\n",
+        "    os.environ[\"OPENAI_API_KEY\"] = secret\n",
+        "\n",
+        "    print(\"API keys loaded successfully\")\n",
+        "\n",
+        "# Initialize Notion client correctly\n",
+        "def init_notion_client():\n",
+        "    global notion_client\n",
+        "    notion_client = Client(auth=notion_key)\n",
+        "    return notion_client"
       ],
       "metadata": {
         "id": "DBUQYCNXX-2a"
       },
-      "execution_count": 32,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -643,15 +667,13 @@
         "# Global variable for file tree\n",
         "global_path = \"\"\n",
         "\n",
+        "# Modify getFileTree function to use the correct token format\n",
         "def getFileTree(owner, repo, path='', level=0):\n",
-        "    \"\"\"\n",
-        "    Fetch and print the tree structure of a GitHub repository.\n",
-        "    \"\"\"\n",
         "    global global_path\n",
         "    try:\n",
         "        api_url = f\"https://api.github.com/repos/{owner}/{repo}/contents/{path}\"\n",
         "        headers = {\n",
-        "            'Authorization': f'Bearer {github_secret}',\n",
+        "            'Authorization': f'token {github_secret}',  # Changed from Bearer to token\n",
         "            'Accept': 'application/vnd.github.v3+json'\n",
         "        }\n",
         "\n",
@@ -675,7 +697,8 @@
         "\n",
         "    except requests.exceptions.RequestException as e:\n",
         "        print(f\"Error accessing GitHub API: {e}\")\n",
-        "        print(f\"Response content: {response.content if 'response' in locals() else 'No response'}\")\n",
+        "        if 'response' in locals():\n",
+        "            print(f\"Response content: {response.content.decode('utf-8')}\")\n",
         "    except Exception as e:\n",
         "        print(f\"Unexpected error: {e}\")"
       ]
@@ -1183,56 +1206,70 @@
       ],
       "source": [
         "import ast\n",
-        "# Take input from user\n",
-        "github_url = input(\"Provide github repo URL:\")\n",
-        "userInput = input(\"Provide file/folder name you want to review:\")\n",
+        "def main():\n",
+        "    try:\n",
+        "        # Initialize everything\n",
+        "        verify_api_keys()\n",
+        "        notion_client = init_notion_client()\n",
         "\n",
-        "# Get owner and repo name from github url\n",
-        "split_url = github_url.split('/')\n",
-        "owner = split_url[3]\n",
-        "repo = split_url[4]\n",
+        "        # Take input from user\n",
+        "        print(\"Example URL format: https://github.com/username/repository\")\n",
+        "        github_url = input(\"Provide github repo URL: \")\n",
         "\n",
-        "# Get the tree structure of github repository\n",
-        "print(\"Fetching repository structure...\")\n",
-        "getFileTree(owner=owner, repo=repo)\n",
+        "        # Remove any api.github.com if present\n",
+        "        github_url = github_url.replace('api.github.com/', 'github.com/')\n",
         "\n",
-        "if not global_path:\n",
-        "    print(\"Failed to fetch repository structure. Please check your GitHub token and repository permissions.\")\n",
-        "    exit(1)\n",
+        "        userInput = input(\"Provide file/folder name you want to review: \")\n",
         "\n",
-        "# Create path extraction crew\n",
-        "pathAgent = Agents.PathAgent()\n",
-        "pathTask = Tasks.getFilePathTask(agent=pathAgent, filetree=global_path, userInput=userInput)\n",
+        "        # Get owner and repo name from github url\n",
+        "        split_url = github_url.split('/')\n",
+        "        if len(split_url) < 5:\n",
+        "            raise ValueError(\"Invalid GitHub URL format\")\n",
+        "        owner = split_url[3]\n",
+        "        repo = split_url[4]\n",
         "\n",
-        "# Create and run a crew for path extraction with verbose as boolean\n",
-        "path_crew = Crew(\n",
-        "    agents=[pathAgent],\n",
-        "    tasks=[pathTask],\n",
-        "    verbose=True  # Changed from 2 to True\n",
-        ")\n",
+        "        print(f\"\\nAnalyzing repository: {owner}/{repo}\")\n",
         "\n",
-        "try:\n",
-        "    # Get the paths from crew execution\n",
-        "    paths_result = path_crew.kickoff()\n",
-        "    print(f\"Path extraction result: {paths_result}\")\n",
+        "        # Get the tree structure\n",
+        "        print(\"Fetching repository structure...\")\n",
+        "        getFileTree(owner=owner, repo=repo)\n",
         "\n",
-        "    # Reset global path\n",
-        "    global_path = \"\"\n",
+        "        if not global_path:\n",
+        "            print(\"Failed to fetch repository structure.\")\n",
+        "            return\n",
         "\n",
-        "    # Create notion page\n",
-        "    page_id = createNotionPage(projectName=repo)\n",
+        "        # Create path extraction crew\n",
+        "        pathAgent = Agents.PathAgent()\n",
+        "        pathTask = Tasks.getFilePathTask(agent=pathAgent, filetree=global_path, userInput=userInput)\n",
         "\n",
-        "    # Convert the string result to an array\n",
-        "    paths = ast.literal_eval(paths_result)\n",
+        "        path_crew = Crew(\n",
+        "            agents=[pathAgent],\n",
+        "            tasks=[pathTask],\n",
+        "            verbose=True\n",
+        "        )\n",
         "\n",
-        "    # Traverse the paths one by one and review them using ReviewCrew\n",
-        "    for path in paths:\n",
-        "        print(f\"Reviewing file: {path}\")\n",
-        "        reviewCrew = ReviewCrew(owner=owner, repo=repo, page_id=page_id, path=path)\n",
-        "        reviewCrew.run()\n",
+        "        # Get paths\n",
+        "        paths_result = path_crew.kickoff()\n",
+        "        print(f\"Path extraction result: {paths_result}\")\n",
         "\n",
-        "except Exception as e:\n",
-        "    print(f\"Error during execution: {e}\")\n"
+        "        # Reset global path\n",
+        "        global_path = \"\"\n",
+        "\n",
+        "        # Create notion page\n",
+        "        page_id = createNotionPage(projectName=repo)\n",
+        "\n",
+        "        # Process paths\n",
+        "        paths = ast.literal_eval(paths_result)\n",
+        "        for path in paths:\n",
+        "            print(f\"\\nReviewing file: {path}\")\n",
+        "            reviewCrew = ReviewCrew(owner=owner, repo=repo, page_id=page_id, path=path)\n",
+        "            reviewCrew.run()\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error during execution: {e}\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
       ]
     },
     {
